--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 /.vs
 **/mssql.u0772479_test_barbuuudadb.properties
-**/pgsql.j1117558_test_barbuuudadb.properties
+**/pgsql.garantdb_test.properties
 **/mssql.u0772479_barbuuudadb.properties
-**/pgsql.j1117558_barbuuudadb.properties
+**/pgsql.garantdb_configuration.properties
 **/package-lock.json
